--- a/MVC - Supermarket/nbproject/project.properties
+++ b/MVC - Supermarket/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MVC_-_Supermarket
 excludes=
 file.reference.mysql-connector-j-8.4.0.jar=..\\MVC - Demo\\src\\edu\\ijse\\mvc\\lib\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-j-8.4.0.jar-1=src\\edu\\ijse\\mvc\\lib\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.4.0.jar}
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
